<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image_description"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_screen_background"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        android:tint="#6F000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"

        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/allow"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/welcome_screen_button"
            android:text="@string/action_skip"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/deny"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/welcome_screen_button"
            android:onClick="register"
            android:text="@string/action_sign_up"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>